fix overflow in pharagraph

--- a/styles.css
+++ b/styles.css
@@ -88,9 +88,6 @@ header p, header a {
   margin-top: 0px;
 }
 .markdown-body {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
   gap: 0;
   padding: 0px;
   margin: 20px auto;
@@ -101,7 +98,6 @@ header p, header a {
   font-size: 20px;
   line-height: 1.6;
   overflow: visible;
-  white-space: pre-wrap;
   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 
 }
@@ -155,7 +151,6 @@ h4 {
 p.test {
   color: #ffffff;
   max-width: calc(100% - 40px);
-  display: inline;
 }
 
 footer {
@@ -177,13 +172,12 @@ footer > p, footer a {
   text-decoration: none;
 }
 
-#toc_container {
+nav#toc_container {
+  margin-top: 150px;
   display: table;
-  font-size: 95%;
   margin-bottom: 1em;
   padding: 20px;
   width: auto;
-  z-index: 2;
   text-align: left;
   position: sticky;
 }
@@ -203,21 +197,6 @@ footer > p, footer a {
   list-style-type: none;
   margin-top: 10px;
 }
-/* #left-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  padding: 20px;
-  background-color: #212A3E;
-  border-radius: 10px;
-  width: 100%;
-  max-width: 300px;
-  font-size: 20px;
-  line-height: 1.6;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-} */
 
 li {
   list-style-type: none;
